--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,12 @@ header{
     border-right: 1px solid #fff;
     border-left: 1px solid #fff;
 }
+.r-border{
+    border-right: 1px solid #fff;
+}
+.l-border{
+    border-left: 1px solid #fff;
+}
 .mtb-border{
     border-top: 1px solid #fff;
     border-bottom: 1px solid #fff;
@@ -178,5 +184,37 @@ font-size: 1.1333333333333rem;
     width: 28.1%;
     padding: 40px;
     position: relative;
+    overflow: hidden;
+}
+.full-l{
+    width: 56.4% !important;
+}
+.main-tit2{
+    font-size: 5rem;
+    font-family: 'Noto Sans',sans-serif;
+    font-weight: 700;
+    padding: 1px 0px 5px 0px !important;
+}
+.buttonsection{
+    display: flex;
+    justify-content: end;
+    padding: 30px 0px 30px 40px !important;
+    display: flex;
+    align-items: center;
+}
+.buttonback{
+    background-color: var(--pink);
+    padding: 25px;
+    color: #fff;
+}
+.buttonback:hover {
+    background-color: #fff;
+    color: #c3317d;
+}
+.main-h2{
+    height: 125px;
+}
+.main-h3{
+    height: 70px;
     overflow: hidden;
 }
