--- a/css/main.css
+++ b/css/main.css
@@ -190,10 +190,11 @@ font-size: 1.1333333333333rem;
     width: 56.4% !important;
 }
 .main-tit2{
-    font-size: 5rem;
+    font-size: 6rem;
     font-family: 'Noto Sans',sans-serif;
     font-weight: 700;
-    padding: 1px 0px 5px 0px !important;
+    margin-top: -15px;
+    padding: 1px 0px 0px 0px !important;
 }
 .buttonsection{
     display: flex;
@@ -248,4 +249,26 @@ font-size: 1.1333333333333rem;
     font-size: 15px;
     font-size: 1rem;
     line-height: 1.6em;
+}
+.image-coll img {
+    opacity: 0.5; 
+    transition: opacity 0.6s ease; 
+}
+
+.image-coll img:hover {
+    opacity: 100;
+    transition: opacity 0.6s ease; 
+}
+.clas-uk{
+    width: 80%;
+    height: 100%;
+}
+.main-tit3{
+    font-size: 6rem;
+    font-family: 'Noto Sans',sans-serif;
+    font-weight: 700;
+    padding: 1px 0px 0px 0px !important;
+}
+.main-tit3 span{
+    margin-top: -10px !important;
 }
