--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,9 @@ header{
     padding: 5px;
 }
 .w-imp{
-    min-width: 60%;
+    min-width: 60% !important;
+    max-width: 75%;
+    width: 75%;
 }
 .background-image-sec{
     background-image: url('/image/bg-image.jpg');
@@ -155,7 +157,9 @@ font-size: 1.1333333333333rem;
 
 
 .wid-imp{
-    width: 60% !important;
+    min-width: 60% !important;
+    max-width: 75%;
+    width: 75%;
 }
 .card-titel{
     font-size: 2.1333333333333rem;
@@ -310,6 +314,7 @@ font-size: 1.1333333333333rem;
 }
 .footer-info{
     position: absolute;
+    margin-top: 125px;
 }
 .footer-con{
     font-size: 1.4rem;
@@ -319,6 +324,86 @@ font-size: 1.1333333333333rem;
     font-family: 'Noto Sans',sans-serif;
 }
 .rightside-ifno{
-    /* margin-left: 200px; */
-    right: 0;
+    margin-left: -90px;
+    z-index: 2;
+    /* display: inline; */
+    position: sticky;
+    /* right: 0;
+
+    /* right: 0; */
 }
+.dfsnkdlkn{
+    overflow: inherit !important;
+}
+.lastfooter-text{
+    font-family: 'Roboto',sans-serif;
+    font-weight: 700;
+    font-size: 1.9rem !important;
+    line-height: 0.65em;
+    margin-left: -90px;
+    margin-top: 2.5rem;
+}
+
+
+
+
+
+
+
+
+
+
+@media only screen and (min-width: 1080px) and (max-width: 1536px) {
+    .inmiddle-text-main {
+    position: absolute;
+    margin-top: 100px;
+    margin-left: 33%;
+    font-size: 14.4px;
+    width: 40%;
+    line-height: 1.8em;
+    font-weight: 600;
+    font-family: 'Noto Sans',sans-serif;
+} 
+.inmiddle-text {
+    position: absolute;
+    margin-left: 12%;
+    font-size: 24px;
+    width: 60%;
+    line-height: 1.2em;
+    font-weight: 700;
+    font-family: 'Noto Sans',sans-serif;
+}
+.main-h4 .full-l2{
+ padding: 10px 40px 10px 40px !important;
+}
+.main-h4 .imagesection{
+    height: 18rem;
+}
+/* .inssideimage{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.inssideimage img{
+    width: 100%;
+    height: 90%;
+    object-fit: cover;
+} */
+
+
+.main-h9 .card-back-blank{
+    max-width: 33.3%;
+    width: 33.3%;
+    min-width: 30.25%;
+    max-height: 100%;
+    min-height: 80%;
+    overflow: hidden;
+}
+ }
+ .w-45{
+    width: 45% !important;
+    overflow: hidden;
+ }
+ .w-55{
+    width: 55% !important;
+ }
