--- a/css/main.css
+++ b/css/main.css
@@ -162,3 +162,6 @@ font-size: 1.1333333333333rem;
 .card-back:hover::after {
     opacity: 0.1; /* Show the background image on hover */
 }
+.mobile-container{
+    display: none;
+}
